--- a/src/Persistence/MassTransit.EntityLite/MassTransit.EntityLite.csproj
+++ b/src/Persistence/MassTransit.EntityLite/MassTransit.EntityLite.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\MassTransit\MassTransit.csproj" />
+	  <ProjectReference Include="..\..\MassTransit\MassTransit.csproj" />
 	</ItemGroup>
 
 </Project>
